--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           <a href="tel:+4722456677">+47 12 34 56 78</a>
           <a href="#booking">Bestill time</a>
         </div>
-        <p class="footer-note">© 2025 Craftsvilla · Design inspirasjon fra studio C4</p>
+        <p class="footer-note">© 2025 Craftsvilla</p>
       </div>
     </footer>
   </body>
